Closed
Bug 1692422
Opened 4 years ago
Closed 4 years ago
NS_NewURI should return an error if component manager is not available instead of crashing
Categories
(Core :: DOM: Networking, defect, P1)
Tracking
()
RESOLVED
FIXED
87 Branch
Tracking | Status | |
---|---|---|
firefox87 | --- | fixed |
People
(Reporter: ckerschb, Assigned: ckerschb)
References
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
Bug 1688815 revealed that NS_NewURI might cause a crash if the component manager is not available any more - we should handle that instead of causing a crash.
Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Whiteboard: [necko-triaged]
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/c1a6871d6ac2
NS_NewURI should return an error if the ioService is not available (e.g due to being called during shutdown) r=necko-reviewers,valentin
Comment 3•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox87:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•