Bug 1692422: NS_NewURI should return an error if the ioService is not available (e.g due to being called during shutdown) r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D105008